20200313 - fixing horizontal scrollbar bug - see #100

--- a/app/css/core.css
+++ b/app/css/core.css
@@ -240,14 +240,22 @@ cssbody {
 /* INTRO.JS - Fixing issues where the UI element was just white - not visible */
 /* see: https://github.com/usablica/intro.js/issues/840 */
 /* ########################################################################## */
-.introjs-helperLayer { 
-    background: transparent !important; 
-    box-shadow: 0 0 0 9999px 
-    rgba(1, 1, 1, 0.8); 
+.introjs-helperLayer {
+    background: transparent !important;
+    box-shadow: 0 0 0 9999px
+    rgba(1, 1, 1, 0.8);
 }
 
-.introjs-overlay { 
-    background: transparent !important; 
+.introjs-overlay {
+    background: transparent !important;
+}
+
+
+/* ########################################################################## */
+/* FIXING THE HORIZONTAL SCROLLBAR WHICH APPEARS ON i.e. ARCH LINUX on first load */
+/* ########################################################################## */
+::-webkit-scrollbar {
+    display: none;
 }
 
 
